# VideoAngel

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-.json  vcpkg.json
.devcontainer/: devcontainer.json
VideoAngel/: CMakeLists.txt  CircleBuffer.cpp  CircleBuffer.h  Common.h  CvOperater.cpp  CvOperater.h  LowAudio.cpp  LowAudio.h  RingBuffer.cpp  RingBuffer.h  VideoDesc.cpp  VideoDesc.h  VideoGlfw.cpp  VideoGlfw.h  main.cpp
